--- a/blogspot.html
+++ b/blogspot.html
@@ -5,8 +5,11 @@
     </head>
     <body>
         <div id="container">
-            <div>
-                Cabecera
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">
+                    Tu blog de confianza
+                </span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
