--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,8 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se puede hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir informaciáon y tus ideas. 
+                    Mucho más qeu ir a conferencias o salir en youtube.  Excepto si eres un rockstar.  pero estadísticamente no lo eres... por ahora</p>
             </div>
         </div>
     </body>
