Cambié el título del blogspot
Porque puedo

--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El título del posto</title>
+        <title>Bienvenido a este Hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
