--- a/blogspot.html
+++ b/blogspot.html
@@ -17,6 +17,9 @@
                 <p>Los blogs son la mejor forma de compartir informaciáon y tus ideas. 
                     Mucho más qeu ir a conferencias o salir en youtube.  Excepto si eres un rockstar.  pero estadísticamente no lo eres... por ahora</p>
             </div>
+            <div id="footer">
+                Hecho con amor en Electrojam!!!
+            </div>
         </div>
     </body>
 
