--- a/blogspot.html
+++ b/blogspot.html
@@ -13,10 +13,10 @@
                 </span>
             </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir información y tus ideas. 
-                    Mucho más que ir a conferencias o salir en youtube.  Excepto si eres un rockstar.  pero estadísticamente no lo eres... por ahora</p>
+                <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. 
+                    Mucho m&aacute;s que ir a conferencias o salir en youtube.  Excepto si eres un rockstar.  pero estad&iacute;sticamente no lo eres... por ahora</p>
             </div>
             <div id="footer">
                 Hecho con amor en Electrojam!!!
