--- a/blogspot.html
+++ b/blogspot.html
@@ -16,7 +16,7 @@
                 <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. 
-                    Mucho m&aacute;s que ir a conferencias o salir en youtube.  Excepto si eres un rockstar.  pero estad&iacute;sticamente no lo eres... por ahora</p>
+                    Mucho m&aacute;s que ir a conferencias o salir en youtube.  Excepto si eres un rockstar.  Pero estad&iacute;sticamente no lo eres... por ahora</p>
             </div>
             <div id="footer">
                 Hecho con amor en Electrojam!!!
